<resources>
    <string name="app_name">EAP LifePilot</string>
    <string name="header_language">Language</string>
    <string name="header_login">Login</string>
    <string name="header_registration">Registration</string>
    <string name="header_assesment">Assessment</string>
    <string name="header_depression">My Depression</string>
    <string name="header_contact">Contact Us</string>
    <string name="header_resources_information">Resources and Information</string>
    <string name="stress">Stress</string>
    <string name="depression">Depression/Anxiety</string>
    <string name="relationship">Relationship</string>
    <string name="financial">Financial/Legal</string>
    <string name="health">Health</string>
    <string name="work">Work</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="register_now">Register Now!</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="assesment">Assessment</string>
    <string name="contact_us">Contact Us</string>
    <string name="prompt_user_name">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_new_password">Confirm New Password</string>
    <string name="prompt_re_password">Verify Password</string>
    <string name="prompt_company">Company</string>
    <string name="prompt_answer">Answer</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="company_code">Company Code</string>
    <string name="reminder_question">Reminder Question</string>
    <string name="select_reminder_question">Select Reminder Question</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="image_desc">No description</string>
    <string name="my_stress">My Stress</string>
    <string name="my_depression">My Depression</string>
    <string name="my_relation">My Relationship</string>
    <string name="resilency">Resilency</string>
    <string name="alcohol">Alcohol</string>
    <string name="start_quiz">Start the Quiz Now</string>
    <string name="quiz_result">Your test result is between 35&#8211;45</string>
    <string name="stress_desc">Et mei habeo putant admodum, dicat utinam consectetuer ut vim, sit labores perfecto deterruisset cu. Debet ceteros detraxit ut vel, in sint oportere per, ne altera dissentiunt sea. Brute inermis has in. Et posse insolens nam, ut erant imperdiet eam. Sit diam sint duis an, duo illum affert semper ne, esse essent ut sed.</string>
    <string name="contact_desc">Et mei habeo putant admodum, dicat utinam consectetuer ut vim, sit labores perfecto deterruisset cu. Debet ceteros detraxit ut vel, in sint oportere per, ne altera dissentiunt sea. Brute inermis has in. Et posse insolens nam, ut erant imperdiet eam. Sit diam sint duis an, duo illum affert semper ne, esse essent ut sed.

Eros laoreet pri ex, hinc iriure pri ex, sea ad fuisset minimum. Fabellas accusata salutandi eu nam. Est invidunt singulis constituto ei, numquam rationibus definiebas no per. Sea ei habeo homero senserit, ei dolorem appetere dissentiunt vix.</string>
    <string name="depression_directions">This 9-question screening test can help determine whether you might have signs or symptoms of depression. Use the results to decide if you need to see a doctor or other mental health professional to further discuss diagnosis and treatment of depression.</string>
    <string name="depression_instruction">&lt;b>Instructions:&lt;/b> Answer the following questions as they relate to the previous 2 weeks. Rate how often have you been bothered by any of the following problems over the last two weeks. </string>
    <string name="depression_expanded_directions">Expanded directions for Depression assessment:</string>
    <string name="depression_q1"> Little interest or pleasure in doing things</string>
    <string name="depression_q2"> Feeling down, depressed, or hopeless </string>
    <string name="depression_q3"> Trouble falling or staying asleep, or sleeping too much </string>
    <string name="depression_q4"> Feeling tired or having little energy</string>
    <string name="depression_q5"> Poor appetite or overeating </string>
    <string name="depression_q6"> Feeling bad about yourself - or that you are a failur or have let yourself or your family down</string>
    <string name="depression_q7"> Trouble concentrating on things, such as reading the newspaper or watching television</string>
    <string name="depression_q8"> Moving or speaking so slowly that other people could have noticed? - being so fidgety or restless that you have been moving around a lot more than usual</string>
    <string name="depression_q9"> Thoughts that you would be better off dead or of hurting yourself in some way</string>
    <string name="alcohol_q1"> How often do you have a drink containing alcohol?</string>
    <string name="alcohol_q2"> How many drinks containing alcohol do you have on a typical day when you are drinking?</string>
    <string name="alcohol_q3"> How often do you have six or more drinks on one occasion?</string>
    <string name="alcohol_q4"> How often during the last year have you found that you were not able to stop drinking once you had started?</string>
    <string name="alcohol_q5"> How often during the last year have you failed to do what was normally expected from you because of drinking?</string>
    <string name="alcohol_q6"> How often during the last year have you needed a first drink in the morning to get yourself going after a heavy drinking session?</string>
    <string name="alcohol_q7"> How often during the last year have you had a feeling of guilt or remorse after drinking?</string>
    <string name="alcohol_q8"> How often during the last year have you been unable to remember what happened the night before because you had been drinking?</string>
    <string name="alcohol_q9"> Have you or someone else been injured as a result of your drinking?</string>
    <string name="alcohol_q10"> Has a relative or friend or a doctor or another health worker been concerned about your drinking or suggested you cut down?</string>
    <string name="life_pilot_q1"> Are there any legal matters in your life that are causing concern for you or your family?</string>
    <string name="life_pilot_q2"> Do you need a will?</string>
    <string name="life_pilot_q3"> Do engage in arguments about finances with those close to you?</string>
    <string name="life_pilot_q4"> Do you find yourself worrying about finances more than 4 times a week?</string>
    <string name="life_pilot_q5"> Are considering buying, refinancing, or selling a home anytime in the near future?</string>
    <string name="life_pilot_q6"> Have you had a hard time doing your work because of your personal problems?</string>
    <string name="life_pilot_q7"> Do you feel sad, unhappy, or low for most of the day nearly every day?</string>
    <string name="life_pilot_q8"> Do you experience extreme unease and/or worry about many situations and experiences?</string>
    <string name="life_pilot_q9"> Have you found that you have not been able to do what was normally expected of you because of your drinking or other drugs?</string>
    <string name="life_pilot_q10"> Do you and your partner have a great deal of difficulty when it comes to communicating and solving problems together?</string>
    <string name="life_pilot_q11"> Do you at times struggle to find appropriate child care for your children?</string>
    <string name="life_pilot_q12"> Do you participate in the care for any elderly family members either living with you or living at another location?</string>
    <string name="relationship_q1"> My partner and I are able to communicate with respect and not harshly.</string>
    <string name="relationship_q2"> I completely trust my spouse.</string>
    <string name="relationship_q3"> When I am alone with my partner I am relaxed and comfortable.</string>
    <string name="relationship_q4"> My partner is there for me during difficult times.</string>
    <string name="relationship_q5"> We have common interests.</string>
    <string name="relationship_q6"> If we come to an issue upon which we do not agree, I am optimistic we will work out an agreeable solution.</string>
    <string name="relationship_q7"> My partner treats me with care and tenderness.</string>
    <string name="relationship_q8"> My partner listens to me.</string>
    <string name="relationship_q9"> We have activities and friends outside the relationship.</string>
    <string name="relationship_q10"> We have a lot of passion in our relationship.</string>
    <string name="relationship_q11"> My partner likes to share his or her thoughts.</string>
    <string name="relationship_option_1">Never</string>
    <string name="relationship_option_2">Sometimes</string>
    <string name="relationship_option_3">Fairly often</string>
    <string name="relationship_option_4">Very often</string>
    <string name="relationship_option_5">Always</string>
    <string name="depression_option_1">Not at all</string>
    <string name="depression_option_2">Several Days</string>
    <string name="depression_option_3">More than half the days</string>
    <string name="depression_option_4">Nearly every day</string>
    <string name="alcohol_option_1">Never</string>
    <string name="alcohol_option_2">Monthly or less</string>
    <string name="alcohol_option_3">2 to 4 times a month</string>
    <string name="alcohol_option_4">2 to 3 times a week</string>
    <string name="alcohol_option_5">4 or more times a week</string>
    <string name="alcohol_option_6">1 or 2</string>
    <string name="alcohol_option_7">3 or 4</string>
    <string name="alcohol_option_8">5 or 6</string>
    <string name="alcohol_option_9">7, 8, or 9</string>
    <string name="alcohol_option_10">10 or more</string>
    <string name="alcohol_option_11">Less than monthly</string>
    <string name="alcohol_option_12">Monthly</string>
    <string name="alcohol_option_13">Weekly</string>
    <string name="alcohol_option_14">Daily or almost daily</string>
    <string name="alcohol_option_15">No</string>
    <string name="alcohol_option_16">Yes, but not in the last year</string>
    <string name="alcohol_option_17">Yes, during the last year</string>
    <string name="life_pilot_option_1">Yes</string>
    <string name="life_pilot_option_2">No</string>
    <string-array name="company_arrays">
        <item selected="true">Google</item>
        <item>Dell</item>
        <item>Microsoft</item>
        <item>Gateway</item>
    </string-array>
    <string-array name="arrays_reminder_questions">
        <item selected="true">What is your mother\'s maiden name?</item>
        <item>What was your first pet\'s name?</item>
        <item>What is the name of the city you were born in?</item>
        <item>What is the name of the high school you graduated from?</item>
    </string-array>
    <string name="agree_terms_conditions">I agree to the Privacy Policy and Terms &amp; Conditions</string>
    <string name="save_score">Would you like to save your score?</string>
    <string name="my_assessments">My Assessments</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="prompt_enter_name">Enter name</string>
    <string name="prompt_enter_description">Enter description</string>
    <string name="life_pilot">LifePilot</string>
</resources>