<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/screen_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_height"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_resources_pic1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/home_pic2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/squareBtn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_assessment_depression"
            style="@style/SquareButton"
            android:layout_gravity="bottom"
            android:layout_marginRight="20dp"
            android:drawableTop="@drawable/depression"
            android:text="@string/my_depression" />

        <Button
            android:id="@+id/btn_assessment_relation"
            style="@style/SquareButton"
            android:layout_gravity="bottom"
            android:drawableTop="@drawable/relationship"
            android:text="@string/my_relation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_assessment_life_pilot"
            style="@style/SquareButton"
            android:layout_gravity="top"
            android:layout_marginRight="20dp"
            android:drawableTop="@drawable/resiliency"
            android:text="@string/life_pilot" />

        <Button
            android:id="@+id/btn_assessment_alcohol"
            style="@style/SquareButton"
            android:layout_gravity="top"
            android:drawableTop="@drawable/alcohol"
            android:text="@string/alcohol" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_assessment_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:drawablePadding="3dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/my_assessments"
        android:text="@string/my_assessments"
        android:textColor="@color/header_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_footer_height"
            android:layout_alignParentBottom="true"
            layout="@layout/footer" />
    </RelativeLayout>

</LinearLayout>