<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/txt_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:linksClickable="true"
        android:padding="10dp"
        android:text="@string/save_score"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <View
        android:id="@+id/vw_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/txt_alert_dialog"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/lnr_save_yes_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vw_divider"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/txt_alert_dialog_yes"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/header_bg"
            android:textSize="17sp" />

        <View
            android:id="@+id/vw_divider1"
            android:layout_width="0.5dp"
            android:layout_height="40dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txt_alert_dialog_no"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/header_bg"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>